--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 <p id = "text"> Jquery is Awesome </p>
 <script>
 $(document).ready(function(){
     $('#text').click(function(){
-     $('#text').fadeOut(1000);
+     $('#text').hide();
      });
     });
     </script>
