--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
 $(document).ready(function(){
     $('#text').click(function(){
-     $('#text').hide();
+     $('#text').fadeToggle();
      });
     });
     </script>
